[package]
name = "AoC2022"
version = "0.1.0"
edition = "2021"
authors = ["Richard Beneyton <richard.beneyton@gmail.com>"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "*"
clap = "=3.0.0-beta.5"
itertools = "*"

[profile.dev]
opt-level = 0
overflow-checks = true
debug = 2

[features]
path = []
