[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"
authors = ["Richard Beneyton <richard.beneyton@gmail.com>"]
license = "GPL-3.0-or-later"
description = "https://adventofcode.com/ repo for 2022"

[dependencies]
clap = { version = "4.0.*", features = ["derive", "env", "unicode", "cargo"] }
colored = "*"
curl = "*"
env_logger = "*"
exitcode = "*"
inpt = "*"
itertools = "*"
log = "*"
rustc-hash = "*"

[dev-dependencies]
criterion = "0.4"

[profile.dev]
opt-level = 0
overflow-checks = true
debug = 2

[profile.release]
lto = true

[[bench]]
name = "bench1"
harness = false

[features]
path = []
